AmicarDP/src/objects/trailheadapp__Trailmix_Assignment__c.object
<CustomObject>
    <fields>
        <fullName>trailheadapp__Due_At__c</fullName>
        <description>This field has been superseded by Due_Datetime__c and is no longer used.</description>
        <inlineHelpText>The date the Trailmix is to be completed.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Due_Datetime__c</fullName>
        <inlineHelpText>The datetime the Trailmix is to be completed.</inlineHelpText>
        <label>Due Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Status__c</fullName>
        <defaultValue>&quot;Not Processed&quot;</defaultValue>
        <label>Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>trailheadapp__Trailmix__c</fullName>
        <label>Trailmix</label>
        <referenceTo>trailheadapp__Trailmix__c</referenceTo>
        <relationshipLabel>Trailmix Assignments</relationshipLabel>
        <relationshipName>Trailmix_Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>trailheadapp__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Trailmix_Assignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Trailmix Assignment</label>
    <nameField>
        <displayFormat>TA-{0000}</displayFormat>
        <label>Trailmix Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Trailmix Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>